[project]
name = "workbenchrl"
version = "0.1.0"
description = "Multi-task RL environment"
authors = [{ name = "Arnab" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv>=0.1.0"
]

# Optional but good practice
[project.scripts]
start = "inference:main"

# ✅ CRITICAL (DO NOT CHANGE)
[tool.openenv]
entrypoint = "inference:app"
