[project]
name = "workbenchrl"
version = "0.1.0"
description = "Multi-task RL environment"
authors = [{ name = "Arnab" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv>=0.1.0"
]

# ✅ REQUIRED FIX (THIS WAS MISSING)
[project.scripts]
server = "inference:app"

# Optional (keep if you want)
start = "inference:main"

# ✅ DO NOT CHANGE
[tool.openenv]
entrypoint = "inference:app"
